k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: enterprise-next
  labels:
    app: enterprise-next
spec:
  selector:
    app: enterprise-next
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
